@@ -1,6 +1,7 @@
 package bank.recommendationservice.fintech.service;
 
 import bank.recommendationservice.fintech.dto.RuleStatsDTO;
+import bank.recommendationservice.fintech.exception.NullArgumentException;
 import bank.recommendationservice.fintech.exception.RulesNotFoundException;
 import bank.recommendationservice.fintech.model.RuleStats;
 import bank.recommendationservice.fintech.repository.DynamicRuleRepository;
@@ -9,9 +10,7 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class RuleStatsService {
@@ -26,30 +25,63 @@ public class RuleStatsService {
         this.dynamicRuleRepository = dynamicRuleRepository;
     }
 
+    /**
+     * Добавляет объект {@code RuleStats} со счетчиком {@code counter} = 0 в репозиторий
+     * Вызывается каждый раз, когда добавляется новое динамическое правила
+     *
+     * @param dynamicRuleId - id динамического правила
+     * @throws NullArgumentException,  если id динамического правила null
+     * @throws RulesNotFoundException, если динамического правила нет в репозитории
+     */
     public void addRuleStats(Long dynamicRuleId) {
+        logger.debug("Вызван метод addRuleStats(dynamicRuleId: {})", dynamicRuleId);
+        if (dynamicRuleId == null) {
+            logger.error("В метод addRuleStats() передант аргумент null");
+            throw new NullArgumentException("Параметр dynamicRuleId не может быть null");
+        }
         RuleStats ruleStats = new RuleStats();
         ruleStats.setCount(0);
-        ruleStats.setDynamicRule(dynamicRuleRepository.findById(dynamicRuleId).orElseThrow());
+        ruleStats.setDynamicRule(dynamicRuleRepository.findById(dynamicRuleId).orElseThrow(
+                () -> new RulesNotFoundException("Динамическое правило не найдено")));
+        logger.debug("Добавлен ruleStats для динамического правила с id: {}", dynamicRuleId);
         ruleStatsRepository.save(ruleStats);
     }
 
-    public List<RuleStatsDTO> getRuleStats() {
+    /**
+     * @return {@code List} из DTO всех объектов RuleStats
+     */
+    public List<RuleStatsDTO> getAllRuleStats() {
         return ruleStatsRepository.findAll().stream()
                 .map(ruleStats -> new RuleStatsDTO(ruleStats.getDynamicRule().getId(), ruleStats.getCount()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
+    /**
+     * Увеличивает счетчик срабатываний динамического правила
+     *
+     * @param dynamicRuleId id динамического правила
+     * @throws NullArgumentException,  если id динамического правила null
+     * @throws RulesNotFoundException, если динамического правила нет в репозитории
+     */
+    public void increaseCounter(Long dynamicRuleId) {
+        logger.debug("Вызван метод increaseCounter()(dynamicRuleId: {})", dynamicRuleId);
+        if (dynamicRuleId == null) {
+            logger.error("В метод increaseCounter() передант аргумент null");
+            throw new NullArgumentException("Параметр dynamicRuleId не может быть null");
+        }
+        RuleStats ruleStats = ruleStatsRepository.findByDynamicRuleId(dynamicRuleId);
 
-public void increaseCounter(Long ruleId) {
-    RuleStats ruleStats = ruleStatsRepository.findByDynamicRuleId(ruleId);
-
-    if (ruleStats != null) {
-        ruleStats.setCount(ruleStats.getCount() + 1);
-        logger.debug("Увеличен счетчик срабатываний для правила с id: {}", ruleId);
-        ruleStatsRepository.save(ruleStats);
-    } else {
-        logger.warn("Статистика срабатываний по правилу с id: {} не найлена", ruleId);
-        throw new RulesNotFoundException("Статистика срабатываний по правилу не найдена");
+        if (ruleStats != null) {
+            ruleStats.setCount(ruleStats.getCount() + 1);
+            logger.debug("Увеличен счетчик срабатываний для правила с id: {}", dynamicRuleId);
+            ruleStatsRepository.save(ruleStats);
+        } else {
+            logger.error("Статистика срабатываний по правилу с id: {} не найдена", dynamicRuleId);
+            throw new RulesNotFoundException("Статистика срабатываний по правилу не найдена");
+        }
     }
-}
+
+    public void deleteRuleStats(Long dynamicRuleId) {
+        ruleStatsRepository.deleteByDynamicRuleId(dynamicRuleId);
+    }
 }
